--- a/ex1.html
+++ b/ex1.html
@@ -1,112 +1,169 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Hello, world!</title>
-  </head>
-  <body onload="onLoad()">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-              <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-            </a>
-    
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
-              <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
-              <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
-              <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
-            </ul>
-    
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-              <input type="search" class="form-control" placeholder="Search..." aria-label="Search" id="inputText">
-            </form>
-            <button type="button" class="btn btn-light text-dark me-2" id="searchButton">Login</button>
-            <button type="button" class="btn btn-primary">
-              กดมาแล้ว <span  class="badge bg-danger" id="count" >4</span>
-            </button>
-            <div class="dropdown text-end">
-              <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
-              </a>
-              <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-                <li><a class="dropdown-item" href="#">New project...</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
-              </ul>
-            </div>
-          </div>
-    </div>
-    <div class="d-flex justify-content-center my-3">
-      <form class="row gy-2 gx-3 align-items-center">
-        <div class="col-auto">
-          <label class="visually-hidden" for="name">Name</label>
-          <input type="text" class="form-control" id="name" placeholder="Jane Doe">
-        </div>
-        <div class="col-auto">
-          <label class="visually-hidden" for="username">Username</label>
-          <div class="input-group">
-            <div class="input-group-text">@</div>
-            <input type="text" class="form-control" id="username" placeholder="Username">
-          </div>
-        </div>
-        <div class="col-auto">
-          <label class="visually-hidden" for="autoSizingSelect">Preference</label>
-          <select class="form-select" id="namePrefix">
-            <option selected>Choose...</option>
-            <option value="1">นาย</option>
-            <option value="2">นาง</option>
-            <option value="3">นางสาว</option>
-          </select>
-        </div>
-        <div class="col-auto">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="autoSizingCheck">
-            <label class="form-check-label" for="autoSizingCheck">
-              Remember me
-            </label>
-          </div>
-        </div>
-        <div class="col-auto">
-          <button type="button" class="btn btn-primary" id="submitData">Submit</button>
-        </div>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+  <title>Hello, world!</title>
+</head>
+
+<body onload="onLoad()">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
+      </a>
+
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-2 link-secondary" id="allStudentMenu">ชื่อนักศึกษาทั้งหมด</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark" id="searchMenu">ค้นหา</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark" id="addStudentMenu">เพิ่มนักศึกษา</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark" id="editStudentMenu">แก้ไขข้อมูล</a></li>
+      </ul>
+
+      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+        <input type="search" class="form-control" placeholder="Search..." aria-label="Search" id="inputText">
       </form>
+      <button type="button" class="btn btn-light text-dark me-2" id="searchButton">Search</button>
+      <button type="button" class="btn btn-primary">
+        กดมาแล้ว <span class="badge bg-danger" id="count">0</span>
+      </button>
+      <div class="dropdown text-end">
+        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+        </a>
+        <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+          <li><a class="dropdown-item" href="#">New project...</a></li>
+          <li><a class="dropdown-item" href="#">Settings</a></li>
+          <li><a class="dropdown-item" href="#">Profile</a></li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          <li><a class="dropdown-item" href="#">Sign out</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="d-flex flex-row justify-content-center" id="output">
+  </div>
+<div id="addUserDetail">
+  <div class="d-flex justify-content-center my-3" >
+    <form class="row gy-2 gx-3 align-items-center">
+      <div class="form-floating">
+        <input type="text" class="form-control" id="nameInput" placeholder="ชื่อ">
+        <label for="nameInput">Name</label>
+      </div>
+      <div class="form-floating">
+        <input type="text" class="form-control" id="surnameInput" placeholder="นามสกุล">
+        <label for="surnameInput">Surname</label>
+      </div>
+      <div class="form-floating">
+        <input type="text" class="form-control" id="studentIdInput" placeholder="รหัสนักศึกษา">
+        <label for="studentIdInput">รหัสนักศึกษา</label>
+      </div>
+      <div class="form-floating">
+        <input type="text" class="form-control" id="gpaInput" placeholder="gpa">
+        <label for="gpaInput">GPA</label>
+      </div>
+      <div class="form-floating">
+        <input type="text" class="form-control" id="imageLinkInput" placeholder="image Link">
+        <label for="imageLinkInput">Link รูป</label>
+      </div>
+      <div class="col-auto">
+        <button type="button" class="btn btn-primary" id="addButton">Submit</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+  <div class="d-flex flex-row justify-content-center" >
+  </div>
+
+  <div id="output" class="px-5">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">ชื่อ</th>
+          <th scope="col">รหัส</th>
+          <th scope="col">เกรด</th>
+          <th scope="col">ลบ</th>
+        </tr>
+      </thead>
+      <tbody id="tableBody">
+      </tbody>
+    </table>
+  </div>
+
+  <div id="sinigle_student_result" class="px-3 m-5">
+    <div class="row">
+      <div class="col-3"><b>Id:</b></div>
+      <div class="col-3" id="id">id</div>
+    </div>
+    <div class="row">
+      <div class="col-3"><b>Student id:</b></div>
+      <div class="col-3" id="studentId">id</div>
+    </div>
+    <div class="row">
+      <div class="col-3"><b>Name:</b></div>
+      <div class="col-3" id="name">name and surname</div>
+    </div>
+    <div class="row">
+      <div class="col-3"><b>GPA:</b></div>
+      <div class="col-3" id="gpa">gpa</div>
+    </div>
+    <div class="row">
+      <div class="col-3"><b>Id:</b></div>
+      <div class="col-3">
+        <img src="asset/images/default.jpg" alt="default image" id="image">
+      </div>
     </div>
 
-    <div id="output" class="px-5">
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">ชื่อ</th>
-            <th scope="col">รหัส</th>
-            <th scope="col">เพศ</th>
-          </tr>
-        </thead>
-        <tbody id="tableBody">
-        </tbody>
-      </table>
-    </div>
+    <div id="edit_student_result">
+      <div class="px-3 m-5">
+          <div class="row">
+              <div class="col-3"><b>Id:</b></div>
+              <div class="col-3" id="editid"></div>
+          </div>
+          <div class="row">
+              <div class="col-3"><b>Student Id:</b></div>
+              <div class="col-3" id="editstudentId"></div>
+          </div>
+          <div class="row">
+              <div class="col-3"><b>Name:</b></div>
+              <div class="col-3" id="editname"></div>
+          </div>
+          <div class="row">
+              <div class="col-3"><b>GPA:</b></div>
+              <div class="col-3" id="editgpa"></div>
+          </div>
+          <div class="row">
+              <div class="col-3"><b>Image:</b></div>
+              <div class="col-3" id="editid">
+                  <img src="/" alt="default image" id="editimage" />
+              </div>
+          </div>
+      </div>
+  </div>
+  <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script src="script.js" type="text/javascript"></script>
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
+  <script src="script.js" type="text/javascript"></script>
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
+
 </html>
